# dbot-tracking

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.yml  package-lock.json
.github/workflows/: backend-ci-cd.yml  ci-cd.yml  frontend-ci.yml
airflow/: .dockerignore  Dockerfile
airflow/dags/: etl_local_daily_dbot.py  etl_local_initial_dump.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_is_admin.py  003_drop_source_id_unique.py  004_add_watchlist.py  005_add_watchlist_updated_at.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  router.py  signals.py  stocks.py  watchlist.py
backend/app/core/: config.py  database.py  db_url.py  encryption.py  queries.py  security.py
backend/app/etl/: __init__.py  client.py  database.py
backend/app/models/: base.py  models.py
backend/app/repositories/: daily_repo.py  stock_repo.py  token_repo.py  user_repo.py  watchlist_repo.py
backend/app/schemas/: schemas.py
backend/app/services/: services.py
backend/scripts/: create_admin.py  daily_report.py  etl_daily.py  etl_initial.py  query_table.py  update_dbot_token.py  update_password.py  validate_daily.py  validate_overview.py
backend/scripts/queries/: date_coverage.py  latest_signals.py  signal_stats.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_health.py  test_signals.py  test_stocks.py
docker/postgres/: init.sql
docs/airflow/: README.md
docs/api/: README.md
docs/backlog/: known-issues.md
docs/database/: er-diagram.md
docs/deploy/: oracle-cloud.md  terraform.md
docs/development/: README.md
docs/frontend/: README.md
docs/operations/: migration-rollback.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: fallback-build-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/diagnostics/: route-bundle-stats.json
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.json  server-reference-manifest.json
frontend/.next/server/app/: _global-error.html  _global-error.rsc  page.js
frontend/.next/server/chunks/: [externals]__12h-7hw._.js  (+1 more)
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/admin/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/stock/: page.tsx
frontend/app/watchlist/: page.tsx
frontend/components/: app-header.tsx  page-header.tsx  theme-provider.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  date-picker.tsx  dialog.tsx  input.tsx  select.tsx  sheet.tsx  skeleton.tsx  slider.tsx
frontend/features/signals/: signals-dashboard.tsx  signals-table.tsx
frontend/features/stock/: stock-search-box.tsx
frontend/lib/: api.ts  auth.ts  hooks.ts  jwt.ts  schemas.ts
frontend/types/: next-auth.d.ts
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: backup.sh  cloud-init.yaml  deploy-oracle.sh  deploy-swarm.sh  rollback.sh  setup-oracle.sh
(+157 files in other folders)
